<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main_back_blue"
    android:orientation="vertical"
    tools:context=".HintQuizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/identify_car_maker_hint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTimer"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="00:00"
            android:visibility="visible" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgCar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/_1_porsche" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIdentify"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/identify"
            app:cornerRadius="30dp"
            app:strokeColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnIdentify"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enter_character"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCharacterInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:inputType="text"
                android:maxLength="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearDashHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/edtInput"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/linearDashHolder"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:textSize="22sp"
                tools:text="Correct!!!" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtCarMakerName"
                style="@style/TextAppearance.AppCompat.Display2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:textColor="#FFEE58"
                tools:text="Porsche" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>