<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main_back_blue"
    android:orientation="vertical"
    tools:context=".AdvanceQuizActivity">

    <RelativeLayout
        android:id="@+id/relativeHolder"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/advance_level" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTimer"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="00:00"
            android:visibility="visible" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIdentify"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/identify"
        app:cornerRadius="30dp"
        app:strokeColor="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnIdentify"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="center"
        android:textSize="22sp"
        tools:text="Correct!!!" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtScore"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeHolder"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/comfortaa"
        tools:text="Score : 3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/txtResult"
        android:layout_below="@id/txtScore"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCar1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@mipmap/_1_porsche" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearResultHolder1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtInput1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/enter_car_maker"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCarMakerName1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCar2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@mipmap/_1_porsche" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearResultHolder2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtInput2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/enter_car_maker">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCarMakerName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/comfortaa"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCar3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@mipmap/_1_porsche" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearResultHolder3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtInput3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/comfortaa"
                android:hint="@string/enter_car_maker"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtCarMakerName3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>